AC_INIT([lali], [0.7.0dev], [massimo.gengarelli@gmail.com])
AM_INIT_AUTOMAKE

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_CC_C_O
AC_PROG_RANLIB
AC_C_CONST

AC_CONFIG_HEADERS(src/config.h)

AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/core/Makefile
  src/web/Makefile
  src/exporters/Makefile
  src/flate/Makefile
])

AC_OUTPUT
