SUBDIRS = core element flate exporters web
AM_CXXFLAGS = -std=c++0x -DPACKAGE_VERSION=\"${PACKAGE_VERSION}\"
bin_PROGRAMS = lali

lali_SOURCES = main.cpp core/application.cpp core/config.cpp core/search.cpp element/element.cpp element/collection.cpp flate/flate.cpp exporters/exporter.cpp exporters/txt_exporter.cpp web/web.cpp web/http_request.cpp
